# rimpub

./: .editorconfig  .gitignore  Cargo.toml  Readme.md  rustfmt.toml
.github/workflows/: build-release.yml
src/: logger.rs  main.rs  util.rs
src/cli/: config.rs  generate.rs  mod.rs  project.rs  publish.rs
