[package]
name = "rimpub"
description = "A simple CLI tool for publishing RimWorld mods"
authors = ["Rhynia <rhynia_v@outlook.com>"]
license = "GPL-3.0"
version = "0.2.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
dirs = "6"
ignore = "0.4"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
toml = "0.9"

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
panic = "abort"
strip = "symbols"
